dashboard-deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  labels:
    app: dashboard
spec:
  type: ClusterIP
  selector:
    app: dashboard
  ports:
    - name: http
      port: 80
      targetPort: 3000
